# sdlpal

./: .gitignore  .gitmodules  CMakeLists.txt  SDL_stbimage.h  ascii.h  audio.cpp  audio.h  aviplay.cpp  aviplay.h  battle.cpp  battle.h  codepage.h  common.h  defines.h  ending.cpp  ending.h  fight.cpp  fight.h  font.cpp  font.h  fontglyph_cn.h  fontglyph_jp.h  fontglyph_tw.h  game.cpp  game.h  global.c  global.cpp  global.h  glslp.cpp  glslp.h  input.c  input.cpp  input.h  itemmenu.cpp  itemmenu.h  magicmenu.cpp  magicmenu.h  main.cpp  main.h  map.c  (+56 more)
android/app/src/main/cpp/: pal_config.h
editor/: CMakeLists.txt  README.txt  gui.ini  sdlpal.cfg
editor/resources/: editor_meta.json
editor/resources/pal/: 1.rpg
editor/src/: main.cpp  pal_editor.cpp  pal_editor.h  paleditor.cpp  paleditor.h
editor/src/editor/: editor_meta.cpp  editor_meta.h  editor_model.h  enemy_panel.cpp  enemy_panel.h  file_panel.cpp  file_panel.h  game_panel.cpp  game_panel.h  gui_convertor.cpp  gui_convertor.h  gui_template.h  log_panel.cpp  log_panel.h  native_window.cpp  native_window.h  scene_panel.cpp  scene_panel.h  script_panel.cpp  script_panel.h  sprite_panel.cpp  sprite_panel.h  window.h
editor/src/engine/: common.h  game_renderer.cpp  game_renderer.h  pal_battle.cpp  pal_battle.h  pal_common.cpp  pal_common.h  pal_engine.cpp  pal_engine.h  pal_fight.cpp  pal_fight.h  pal_global.cpp  pal_global.h  pal_input.cpp  pal_input.h  pal_log.cpp  pal_log.h  pal_renderer.cpp  pal_renderer.h  pal_resources.cpp  pal_resources.h  pal_scene.cpp  pal_scene.h  pal_script.cpp  pal_script.h  pal_video.cpp  pal_video.h
editor/src/engine/render/: render_backend.cpp  render_backend.h  sdl2_backend.cpp  sdl2_backend.h
editor/src/gui/: editor_model.cpp  game_panel.cpp  game_panel.h  native_window.cpp  native_window.h  scene_panel.cpp  scene_panel.h
editor/tools/script_viewer/: CMakeLists.txt
editor/tools/script_viewer/src/: main.cpp  pal_loader.cpp  pal_loader.h  script.cpp  script.h  script_opcode.h
ios/: pal_config.h
libmad/: mad.h  music_mad.h
unix/: native_midi.cpp  unix.cpp
win32/: pal_config.h
winrt/: pal_config.h
